<resources>
    <string name="app_name">Hanuman Chalisa</string>
    <string name="play_learn">Play and Learn</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="high_score">Highscore: 0</string>
    <string name="current_score">Score: 0</string>
    <string name="question_count">Question: </string>
    <string name="slash_count">/</string>
    <string name="count_down">00:30</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="confirm_next">Confirm</string>
    <string name="question_text">Here will be the question text</string>
    <string name="difficulty_easy">Difficulty: </string>
    <string name="answer_correct1">Answer 1 is correct</string>
    <string name="answer_correct2">Answer 2 is correct</string>
    <string name="answer_correct3">Answer 3 is correct</string>
    <string name="next_question">Next</string>
    <string name="finish_game">Finish</string>
    <string name="refresh_highscore">Refresh Highscore</string>
    <string name="addUnit">ca-app-pub-1995396020961340/9359353923</string>


</resources>
